# ai-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  example.env  pyproject.toml  requirements.txt
.github/workflows/: docker-images.yml  ecr-images.yml
ai/: knowledge_base.py  settings.py
ai/assistants/: image.py
api/: app.py  cli.py  main.py  settings.py
api/routes/: agent_routes.py  chat_routes.py  duckgpt_routes.py  endpoints.py  prediction_routes.py  prompt_routes.py  status_routes.py  training_routes.py  v1_routes.py
api/utils/: log.py
app/: Home.py  cli.py  settings.py
app/pages/: 1_Agent_Demo.py  1_DuckGpt.py  1_PDF_Assistant.py  1_Search.py  2_Image_Assistant.py  2_Prompt_Demo.py  2_Prompt_Product.py  2_Stock_Prediction.py  2_TimeSeries.py  2_chat.py  3_ChatBot.py  3_Chat_Demo.py  3_Chat_Product.py  3_Website_Assistant.py  4_ChatGPT.py  5_ChatBot.py  chatbot.py
app/utils/: log.py
assistant/: assistant.py  chatbot.py  database.py  powering_your_products_with_chatgpt_and_your_data.ipynb  settings.py  transformers.py
chatbot/: config.py  database.py  powering_your_products_with_chatgpt_and_your_data.ipynb  search.py  transformers.py
db/: README.md  alembic.ini  session.py  tables.py
db/migrations/: README.md  env.py
notebooks/: auto_pdf_conversation.ipynb  basics.ipynb  build_ai_products.ipynb  build_your_own_product.ipynb  chatgpt_stream.ipynb  crypto_nb.ipynb  duckgpt.ipynb  embeddings_example.ipynb  rag_pdf_conversation.ipynb  stock_prediction_model.ipynb  vision.ipynb
scripts/: build_dev_image.sh  build_jupyter_image.sh  build_prd_image.sh  create_venv.sh  entrypoint.sh  format.sh  install.sh  setup_venv.sh  upgrade.sh  validate.sh
utils/: chatbot.py  database.py  log.py  message.py  transformers.py
workspace/: .gitignore  __init__.py  config.py  dev_resources.py  prd_resources.py  settings.py
workspace/dev/: aws_config.py  aws_resources.py  docker_config.py  docker_resources.py
workspace/dev/jupyter/: build_jupyter_image.sh  jupyter.Dockerfile  lab.py
workspace/env/: dev_jupyter_env.yml
workspace/example_secrets/: db_secrets.yml  dev_db_secrets.yml  dev_jupyter_secrets.yml  openai-api-key.txt  prd_app_secrets.yml  prd_jupyter_secrets.yml
workspace/jupyter/: build_jupyter_image.sh  jupyter.Dockerfile  lab.py
workspace/jupyter/resources/: jupyter_lab_config.py
workspace/output/Secret/: ai-app-prd-app-secret.json  ai-app-prd-db-secret.json
workspace/prd/: aws_config.py  aws_resources.py  docker_config.py  docker_resources.py
