[project]
name = "ai-app"
version = "0.1.0"
requires-python = ">3.7"
readme = "README.md"
authors = [
  {name = "Team", email = "team@team.com"}
]

dependencies = [
  # Formatting
  "black",
  # Type checking
  "mypy",
  # Pre-commit hooks
  "pre-commit",
  # Testing
  "pytest",
  # Linting
  "ruff",
  "phidata==1.6.1",
  # Libraries for data processing
  "pandas",
  "polars",
  "duckdb",
  # Libraries for Api server
  "fastapi",
  "typer",
  "uvicorn",
  # Project Libraries
  "openai",
  "prophet",
  "redis",
  "types-redis",
  "requests",
  "termcolor",
  "tiktoken",
  "textract",
  "langchain",
  "streamlit",
  "streamlit-chat",
]

[project.scripts]
api = "api.cli:cli"
app = "app.cli:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api", "app", "assistant", "workspace", "notebooks", "tests"]

# Change this value to use a different directory for the phidata workspace.
# [tool.phidata]
# workspace = "workspace"

[tool.ruff]
line-length = 110
exclude = [
  ".venv*",
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
exclude = [
  ".venv*",
]

[[tool.mypy.overrides]]
module = [
  "duckdb.*",
  "langchain.*",
  "joblib.*",
  "redis.*",
  "pandas.*",
  "phidata.*",
  "prophet.*",
  "pyarrow.*",
  "setuptools.*",
  "streamlit_chat.*",
]
ignore_missing_imports = true
